--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,4 +1,4 @@
-.main-shop{
+.main-shop {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -10,14 +10,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-    width: 82vw;
-    min-height: 73vh;
+  width: 82vw;
+  min-height: 73vh;
 }
 .car-container {
   width: 90%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.cart-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.cart-btns button {
+  padding: 6px 10px;
 }
 .car-card img {
   height: 200px;
@@ -82,39 +91,64 @@
   color: #ffffff;
   background-color: #741906;
   border: none;
-  
+
   cursor: pointer;
 }
 
-.minus{
-border-top-left-radius: 4px;
-border-bottom-left-radius: 4px;
+.minus {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
-.plus{
-border-top-right-radius: 4px;
-border-bottom-right-radius: 4px;
+.plus {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
-.counter span{
+.counter span {
   font-size: 2rem;
 }
 
-
-.cards-title{
+.cards-title {
   position: relative;
 }
-.cards-title h2{
+.cards-title h2 {
   font-size: 2.5rem;
   position: inherit;
   color: #741906;
   top: -50px;
 }
 
+.carousel {
+  position: relative;
+  width: 100%;
+}
 
-.koCOMj {
-    display: flex;
-    flex-direction: column;
-    -webkit-box-align: center;
-    align-items: center;
-    width: 90%;
-    direction: ltr;
+.carousel .rec-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.carousel .rec-arrow:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.carousel .rec-arrow-left {
+  left: 20px;
+}
+
+.carousel .rec-arrow-right {
+  right: 20px;
+}
+.cart-icon {
+  position: relative;
 }
