--- a/src/components/Shop/neoCArt.css
+++ b/src/components/Shop/neoCArt.css
@@ -18,10 +18,13 @@
   right: 95px;
   z-index: 110;
   padding: 20px;
-  /* transform: translateX(1252px); */
+  transform: translateX(52px);
   transition: all 0.3s ease-in-out;
 }
-
+.cart-dropdown{
+    background-color: #c52303;
+transform: translateX(2px);
+}
 .cart-items {
   margin-top: 20px;
   width: 300px;
@@ -34,7 +37,6 @@
 .cart-item {
   width: 380px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 10px;
@@ -42,6 +44,11 @@
   color: #333333;
   background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+.cart-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .car-card {
   display: flex;
@@ -105,41 +112,7 @@
   flex-direction: column;
   align-items: start;
 }
-.carousel {
-  position: relative;
-  width: 100%;
-}
 
-.carousel .rec-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.carousel .rec-arrow:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.carousel .rec-arrow-left {
-  left: 20px;
-}
-
-.carousel .rec-arrow-right {
-  right: 20px;
-}
-.cart-icon {
-  position: relative;
-}
 .counterTop {
   font-size: 18px;
   background-color: #c52303;
