--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -29,7 +29,7 @@
   padding: 6px 10px;
 }
 .car-card img {
-  height: 200px;
+  width: 100%;
 }
 .cards-main {
   display: flex;
@@ -37,7 +37,16 @@
   justify-content: space-between;
   gap: 20px;
 }
-
+.car-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 7px;
+    box-shadow: #333333 0px 0px 2px;
+    width: 25rem;
+    height: 35rem;
+    padding: 1rem;
+}
 .card {
   width: 300px;
   padding: 20px;
@@ -61,7 +70,9 @@
   font-size: 14px;
   color: #888888;
 }
-
+.car-details p{
+  font-size: .6rem;
+}
 .description {
   margin-top: 10px;
   font-size: 14px;
@@ -85,14 +96,13 @@
 }
 
 .counter button {
-  width: 50px;
-  height: 30px;
-  font-size: 18px;
-  color: #ffffff;
-  background-color: #741906;
-  border: none;
-
-  cursor: pointer;
+    width: 39px;
+    height: 30px;
+    font-size: 18px;
+    color: #ffffff;
+    background-color: #741906;
+    border: none;
+    cursor: pointer;
 }
 
 .minus {
