--- a/src/components/Shop/neoCArt.css
+++ b/src/components/Shop/neoCArt.css
@@ -22,7 +22,7 @@
   transition: all 0.3s ease-in-out;
 }
 .cart-dropdown{
-    background-color: #c52303;
+    background-color: #c7bfbe;
 transform: translateX(2px);
 }
 .cart-items {
@@ -50,16 +50,7 @@ transform: translateX(2px);
     flex-direction: column;
     justify-content: space-between;
 }
-.car-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 15px;
-  box-shadow: #333333 0px 0px 2px;
-  width: 25rem;
-  height: 35rem;
-  padding: 2rem;
-}
+
 .cart-item button {
   font-size: 16px;
   color: #ffffff;
@@ -98,7 +89,7 @@ transform: translateX(2px);
 }
 .info p {
   color: #741906;
-  font-size: 1.2rem;
+  font-size: .9rem;
 }
 .info svg {
   color: #12273d;
@@ -108,9 +99,10 @@ transform: translateX(2px);
   grid-template-columns: 1fr 1fr;
 }
 .info {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: end;
 }
 
 .counterTop {
