--- a/src/index.css
+++ b/src/index.css
@@ -156,13 +156,26 @@ code {
  
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1000px) {
+
+.car-card-bottom {
+    display: grid;
+    grid-template-columns: 1fr;
+}
   .CartButton {
     right: 41%;
   }
 }
 
 @media (max-width: 800px) {
+  .shop-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 116vw;
+    min-height: 70vh;
+}
   .CartDropdown {
     left: auto;
     right: 0px;
@@ -236,9 +249,16 @@ code {
   .foo {
     width: 100%;
   }
+  .car-card img {
+   
+}
 }
 
 @media (max-width: 500px) {
+  .car-card img {
+  
+    
+}
   form {
     display: flex;
     flex-direction: column;
