--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 82vw;
+  width: 100vw;
   min-height: 73vh;
 }
 .car-container {
@@ -45,7 +45,7 @@
     box-shadow: #333333 0px 0px 2px;
     width: 25rem;
     height: 35rem;
-    padding: 1rem;
+    padding: 1rem 2rem;
 }
 .card {
   width: 300px;
